--- a/mbed_app.json
+++ b/mbed_app.json
@@ -10,7 +10,7 @@
         },
         "mesh-mode": {
             "help": "Mesh networking mode. Options are LOWPAN_ND, LOWPAN_WS and THREAD",
-            "value": "LOWPAN_ND"
+            "value": "LOWPAN_WS"
         },
         "backhaul-mac-src": {
             "help": "Where to get EUI48 address. Options are BOARD, CONFIG",
@@ -22,96 +22,79 @@
         },
         "nanostack_extended_heap": {
             "help": "Add additional memory region to nanostack heap. Valid only for selected platforms. Region size may vary depending of the toolchain.",
-            "value": false
+            "value": true
         },
         "backhaul-mac": "{0x02, 0x00, 0x00, 0x00, 0x00, 0x01}",
-        "slip_hw_flow_control": "true",
+        "slip_hw_flow_control": "false",
         "slip_serial_baud_rate": "921600",
         "debug-trace": "true",
-        "defined-BR-config": "true",
-        "security-mode": "NONE",
-        "psk-key-id": 1,
-        "psk-key": "{0xa0, 0xa1, 0xa2, 0xa3, 0xa4, 0xa5, 0xa6, 0xa7, 0xa8, 0xa9, 0xaa, 0xab, 0xac, 0xad, 0xae, 0xaf}",
-        "pana-mode": "",
-        "tls-psk-key": "{0xcf, 0xce, 0xcd, 0xcc, 0xcb, 0xca, 0xc9, 0xc8, 0xc7, 0xc6, 0xc5, 0xc4, 0xc3, 0xc2, 0xc1, 0xc0}",
-        "tls-psk-key-id": 1,
-        "pan-id": "0x0691",
-        "network-id": "network000000000",
-        "beacon-protocol-id": 4,
-        "prefix": "fd00:db8::",
-        "prefix-from-backhaul": true,
-        "rf-channel": 12,
-        "rf-channel-page": 0,
-        "rf-channel-mask": "0x07fff800",
-        "short-mac-address": "0xface",
         "backhaul-dynamic-bootstrap": true,
         "backhaul-prefix": "\"fd00:db8:ff1::\"",
         "backhaul-default-route": "\"::/0\"",
         "backhaul-next-hop": "\"fe80::1\"",
-        "ra-router-lifetime": 1024,
-        "rpl-instance-id": 1,
-        "rpl-idoublings": 9,
-        "rpl-imin": 12,
-        "rpl-k": 10,
-        "rpl-max-rank-inc": 2048,
-        "rpl-min-hop-rank-inc": 128,
-        "rpl-default-lifetime": 64,
-        "rpl-lifetime-unit": 60,
-        "rpl-pcs": 1,
-        "rpl-ocp": 1,
         "multicast-addr": "ff05::7",
         "LED": "NC",
         "SERIAL_TX": "NC",
         "SERIAL_RX": "NC",
         "SERIAL_CTS": "NC",
-        "SERIAL_RTS": "NC"
+        "SERIAL_RTS": "NC",
+        "uc-channel-function": "CHANNEL_FUNCTION_FIXED",
+        "bc-channel-function": "CHANNEL_FUNCTION_FIXED",
+        "regulatory-domain": 3,
+        "operating-class": 2,
+        "operating-mode": 3,
+        "uc-fixed-channel": 0,
+        "bc-fixed-channel": 0,
+        "network-name": "\"Wi-SUN Network\"",
+        "certificate-header": {
+            "help": "Certificate header",
+            "value": "\"wisun_certificates.h\""
+        },
+        "root-certificate": {
+            "help": "Root certificate in PEM format (must be a null terminated c-string)",
+            "value": "WISUN_ROOT_CERTIFICATE"
+        },
+        "own-certificate": {
+            "help": "Own certificate in PEM format (must be a null terminated c-string)",
+            "value": "WISUN_SERVER_CERTIFICATE"
+        },
+        "own-certificate-key": {
+            "help": "Own certificate's key in PEM format (must be a null terminated c-string)",
+            "value": "WISUN_SERVER_KEY"
+        }
+        
     },
+    "macros": ["MBEDTLS_USER_CONFIG_FILE=\"source/mbedtls_wisun_config.h\""],    
     "target_overrides": {
         "*": {
             "target.network-default-interface-type": "ETHERNET",
             "nsapi.default-stack": "NANOSTACK",
             "mbed-trace.enable": 1,
-            "mbed-trace.max-level": "TRACE_LEVEL_DEBUG",
-            "nanostack.configuration": "lowpan_border_router",
-            "platform.stdio-convert-newlines": true,
+            "mbed-trace.max-level": "TRACE_LEVEL_INFO",
+            "nanostack.configuration": "ws_border_router",
+            "platform.stdio-convert-newlines": false,
             "platform.stdio-baud-rate": 115200,
-            "mbed-mesh-api.heap-size": 40000,
+            "mbed-mesh-api.heap-size": 65535,
             "mbed-mesh-api.heap-stat-info": "&memory_heap_stat",
-            "mbed-mesh-api.heap-stat-info-definition": "mem_stat_t memory_heap_stat;"
+            "mbed-mesh-api.heap-stat-info-definition": "mem_stat_t memory_heap_stat;",
+            "platform.stdio-buffered-serial": true
         },
-        "K64F": {
-            "LED": "LED_GREEN",
-            "SERIAL_TX": "PTE0",
-            "SERIAL_RX": "PTE1",
-            "SERIAL_CTS": "PTE2",
-            "SERIAL_RTS": "PTE3",
-            "kinetis-emac.tx-ring-len":4,
-            "kinetis-emac.rx-ring-len":4
-        },
-        "K64F_STATIC_BR": {
-            "LED": "LED_GREEN",
-            "SERIAL_TX": "PTE0",
-            "SERIAL_RX": "PTE1",
-            "SERIAL_CTS": "PTE2",
-            "SERIAL_RTS": "PTE3",
-            "kinetis-emac.tx-ring-len":4,
-            "kinetis-emac.rx-ring-len":4,
-            "debug-trace": "true",
-            "pan-id": "0xABBA",
-            "rf-channel": 17,
-            "mbed-mesh-api.heap-size": 100000
-        },
-        "K66F": {
-            "LED": "LED_GREEN",
-            "kinetis-emac.tx-ring-len":4,
-            "kinetis-emac.rx-ring-len":4
-        },
-        "SLWSTK6007A": {
+        "EFR32_CUSTOM": {
+            "app.radio-type": "EFR32",
+            "app.backhaul-driver": "SLIP",
+            "app.slip_hw_flow_control": "true",
             "LED": "LED0",
             "SERIAL_TX": "PC4",
             "SERIAL_RX": "PC5",
             "SERIAL_CTS": "PC2",
-            "SERIAL_RTS": "PC3"
+            "SERIAL_RTS": "PC3",
+            "mbed-mesh-api.wisun-network-size": 1
+        },
+        "DISCO_F769NI": {
+            "app.radio-type": "S2LP",
+            "app.backhaul-driver": "EMAC",
+            "mbed-mesh-api.heap-size": 100000,
+            "mbed-mesh-api.wisun-network-size": 1
         }
     }
 }
