Fixed environment for Linux

--- a/.vscode/tasks-linux.json
+++ b/.vscode/tasks-linux.json
@@ -54,7 +54,7 @@
         },
         {
             "label": "🚀🐞 Openocd flash (GCC debug) F769",
-            "command": "flash_stm32f769disco.bat",
+            "command": "flash_stm32f769disco.sh",
             "args": ["${workspaceFolderBasename}"]
         },
         {
