Updated VScode environment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "pa.h": "c",
-        "chrono": "cpp"
+        "chrono": "cpp",
+        "sw_mac_internal.h": "c"
     }
 }
