--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
         },
         {
             "label": "➡️🐧 Deploy/Update environment and libraries (Linux)",
-            "command": "vscode_deploy_linux.sh",
+            "command": "./vscode_deploy_linux.sh",
             "args": ["EFR32_CUSTOM", "${workspaceFolderBasename}"]
         },
         {
@@ -26,7 +26,7 @@
             "args": ["compile", "--profile=debug", "-m", "EFR32_CUSTOM", "-t", "GCC_ARM"]
         },
         {
-            "label": "===== BUILD DISCO L769 =====",
+            "label": "===== BUILD DISCO F769 =====",
             "command": ""
         },
         {
@@ -35,26 +35,26 @@
             "args": ["compile", "--profile=debug", "-m", "DISCO_F769NI", "-t", "GCC_ARM"]
         },
         {
-            "label": "===== EFR32 Flash (Windows) =====",
+            "label": "===== EFR32 Flash (Linux) =====",
             "command": ""
         },
         {
-            "label": "🚀 JLINK Flash board (GCC)",
-            "command": "jlink",
+            "label": "🐧🚀 JLINK Flash board (GCC)",
+            "command": "JLinkExe",
             "args": ["-device", "efr32mg12p433f1024gm68", "-autoconnect", "1", "-NoGui", "0", "-if", "SWD", "-Speed", "4000", "-CommandFile", "flashefr32custom.jlink"]
         },
         {
-            "label": "🚀🐞 JLINK Flash board (GCC debug)",
-            "command": "jlink",
+            "label": "🐧🚀🐞 JLINK Flash board (GCC debug)",
+            "command": "JLinkExe",
             "args": ["-device", "efr32mg12p433f1024gm68", "-autoconnect", "1", "-NoGui", "0", "-if", "SWD", "-Speed", "4000", "-CommandFile", "flashefr32custom_debug.jlink"]
         },
         {
-            "label": "===== DISCO L769 Flash (Windows) =====",
+            "label": "===== DISCO L769 Flash (Linux) =====",
             "command": ""
         },
         {
             "label": "🚀🐞 Openocd flash (GCC debug) F769",
-            "command": "flash_stm32f769disco.bat",
+            "command": "flash_stm32f769disco.sh",
             "args": ["${workspaceFolderBasename}"]
         },
         {
@@ -67,7 +67,7 @@
             "args": ["compile", "-m", "EFR32_CUSTOM", "-t", "GCC_ARM", "--config"]
         },
         {
-            "label": "⚙️ Show config L769",
+            "label": "⚙️ Show config F769",
             "command": "mbed",
             "args": ["compile", "-m", "DISCO_F769NI", "-t", "GCC_ARM", "--config"]
         }
