--- a/mbed_app.json
+++ b/mbed_app.json
@@ -18,7 +18,7 @@
         },
         "backhaul-mld": {
             "help": "Enable proxying Multicast Listener Discovery messages to backhaul network",
-            "value": "false"
+            "value": "true"
         },
         "nanostack_extended_heap": {
             "help": "Add additional memory region to nanostack heap. Valid only for selected platforms. Region size may vary depending of the toolchain.",
@@ -29,7 +29,7 @@
         "slip_serial_baud_rate": "921600",
         "debug-trace": "true",
         "backhaul-dynamic-bootstrap": true,
-        "backhaul-prefix": "\"fd00:db8:ff1::\"",
+        "backhaul-prefix": "\"2a02:1210:741f:d700:\"",
         "backhaul-default-route": "\"::/0\"",
         "backhaul-next-hop": "\"fe80::1\"",
         "multicast-addr": "ff05::7",
@@ -38,8 +38,8 @@
         "SERIAL_RX": "NC",
         "SERIAL_CTS": "NC",
         "SERIAL_RTS": "NC",
-        "uc-channel-function": "CHANNEL_FUNCTION_FIXED",
-        "bc-channel-function": "CHANNEL_FUNCTION_FIXED",
+        "uc-channel-function": "0xFF",
+        "bc-channel-function": "0xFF",
         "regulatory-domain": 3,
         "operating-class": 2,
         "operating-mode": "0x2a",
